@@ -791,3 +791,40 @@ int break_down_pkg_version(int *v,char *version){
 	return count;
 }
 
+struct pkg_list *get_available_and_update_pkgs(void){
+	struct pkg_list *updates;
+	struct pkg_list *available;
+	struct pkg_list *all = NULL;
+	pkg_info_t **realloc_tmp;
+	int i;
+
+	updates = get_update_pkgs();
+	available = get_available_pkgs();
+
+	all = malloc( sizeof *all );
+	all->pkgs = malloc( sizeof *all->pkgs );
+	all->pkg_count = 0;
+
+	realloc_tmp = realloc(	
+		all->pkgs,
+		sizeof *all->pkgs * ( updates->pkg_count + available->pkg_count + 1 )
+	);
+	if( realloc_tmp != NULL ){
+		all->pkgs = realloc_tmp;
+	}else{
+		fprintf(stderr,"Failed to resize size all package listing\n");
+		exit(1);	
+	}
+	
+	for(i = 0; i < updates->pkg_count;i++){
+		all->pkgs[all->pkg_count] = updates->pkgs[i];
+		++all->pkg_count;
+	}
+	for(i = 0; i < available->pkg_count;i++){
+		all->pkgs[all->pkg_count] = available->pkgs[i];
+		++all->pkg_count;
+	}
+
+	return all;
+}
+
